align players on bench with scrollable bench and fix field size

--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,10 @@ h1 {
 }
 
 .bench-players {
+  justify-content: center;
+  gap: 20px;
   display: flex;
+  flex-wrap: wrap;
 }
 
 .player {
